[package]
name = "netbug"
version = "0.1.0"
authors = ["joshmeranda <joshmeranda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.8"
toml = "0.5"
serde_derive = "1.0"
serde = "1.0"
failure = "0.1"

[lib]
name = "config"
path = "src/config/lib.rs"