[package]
name = "netbug"
version = "0.1.0"
authors = ["joshmeranda <joshmeranda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.8"
toml = "0.5"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
rust-crypto = "0.2"
num-derive = "0.3"
num-traits = "0.2"
clap = "2.33"
clokwerk = "0.3"
regex = "1"
chrono = "0.4"

[lib]
name = "netbug"
path = "src/lib/lib.rs"
doctest = true